# notes-with-tags

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
.github/workflows/: run_tests.yml
alembic/: env.py
alembic/versions/: 5b32d2883a13_tag_table.py  84d94c61b830_init.py
app/: api_models.py  main.py  models.py
app/database/: crud.py  db_config.py  db_models.py  db_tables.py
tests/: conftest.py  test_database.py  test_main.py  tests_main.py  utils.py
tests/test_crud/: conftest.py  test_note_crud.py
tests/test_main/: test_image.py  test_main.py  test_note.py  test_tags.py
tests/unittests/: test_crud.py  test_uuid.py
