[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = "tutorial"
authors = ["kundziorro"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.12"
shortuuid = "^1.0.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
httpx = "^0.24.0"
requests = "^2.30.0"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
target_version = ['py311']

[tool.flake8]
max-line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
